# dragonmidi

./: .gitignore  CLAUDE.md  DragonMIDI-mac.spec  DragonMIDI-win.spec  LICENSE  README.md  pyinstaller_entry.py  pyproject.toml
.github/workflows/: build-mac.yml  build-windows.yml  lint.yml  test.yml
docs/: controller-profile-guide.md  dragonframe-gamepad-research.md  dragonframe-hotkeys-research.md  dragonframe-messages-research.md  dragonframe-websocket-research.md  high-level-design.md  nanokontrol-mapping-proposal.md
docs/llds/: app-ui.md  keystroke-output.md  midi-input.md  osc-io.md  static-mapping.md  websocket-output.md
docs/specs/: app-ui.md  keystroke-output.md  midi-input.md  osc-io.md  static-mapping.md  websocket-output.md
dragonmidi/: app.py  config.py  controller_profile.py  controller_profile_loader.py  events.py  keystroke_output.py  mapping.py  mapping_view_model.py  mapping_widgets.py  midi_input.py  osc_io.py  preset_store.py  queue_drain.py  shutdown.py  signal_monitor.py  status_presenter.py  status_widgets.py  websocket_output.py
dragonmidi/controllers/: nanokontrol-studio.yaml  nanokontrol2.yaml
packaging/: DragonMIDI-mac.spec  DragonMIDI-win.spec  pyinstaller_entry.py
tests/: conftest.py  support.py  test_config.py  test_controller_profile.py  test_controller_profile_loader.py  test_keystroke_output.py  test_mapping.py  test_mapping_config_schema.py  test_mapping_profiles.py  test_mapping_view_model.py  test_midi_input.py  test_osc_io.py  test_preset_store.py  test_queue_drain.py  test_shutdown.py  test_signal_monitor.py  test_status_presenter.py  test_websocket_output.py
