[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonmidi"
version = "0.1.0"
description = "MIDI-to-OSC bridge from a KORG nanoKONTROL Studio to Dragonframe"
requires-python = ">=3.10"
dependencies = [
  "mido==1.3.3",
  "python-rtmidi==1.5.8",
  "PySide6==6.11.1",
  "pynput==1.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "hypothesis==6.157.0",
]

[project.scripts]
dragonmidi = "dragonmidi.app:run"

[tool.setuptools]
packages = ["dragonmidi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
