[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonmidi"
version = "0.1.0"
description = "MIDI-to-OSC bridge from a KORG nanoKONTROL Studio to Dragonframe"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "mido==1.3.3",
  "python-rtmidi==1.5.8",
  "PySide6==6.11.1",
  "pynput==1.8.2",
  "websockets==16.1.1",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "hypothesis==6.157.0",
  "ruff==0.15.22",
]

[project.scripts]
dragonmidi = "dragonmidi.app:run"

[tool.setuptools]
packages = ["dragonmidi"]

[tool.setuptools.package-data]
dragonmidi = ["controllers/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 150
